# python-notebooks

./: Dockerfile  PV-Death-Benefits.ipynb  README.md  gpu.Dockerfile  pymort_gpu.ipynb  pyproject.toml  requirements.txt
jaxtuary/: __init__.py  mortality.py  utils.py
learn/: darn.ipynb  jax_notes_1.ipynb  net_premium_demo.ipynb  parallel_prefix_sum.ipynb
tests/: test_mortality.py
