[tool.poetry]
name = "jaxtuary"
version = "0.1.0"
description = ""
authors = ["Matthew Caseres <matthewcaseres@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
